force-app/main/default/objects/Suggested_Product__c/Suggested_Product__c.object-meta.xml
<CustomObject>
    <label>Suggested Product</label>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>Suggested Products Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suggested Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>