force-app/main/default/objects/Suggested_Product__c/fields/Quantity_if_3_or_more_days__c.field-meta.xml
<CustomField>
    <fullName>Quantity_if_3_or_more_days__c</fullName>
    <label>Quantity if 3 or more days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>