force-app/main/default/objects/Suggested_Product__c/fields/Schedule_Product__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedule Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Suggested Products</relationshipLabel>
    <relationshipName>Suggested_Products</relationshipName>
    <type>Lookup</type>
</CustomField>