force-app/main/default/objects/Suggested_Product__c/fields/Suggested_Product__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Suggested Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Suggested Products (Suggested Product)</relationshipLabel>
    <relationshipName>Suggested_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>